<resources>
    <string name="app_name">MapNoteV2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="start_fragment_text">Choose database</string>
    <string name="start_text_room">Room</string>
    <string name="start_text_firebase">firebase</string>
    <string name="add_button">Add</string>
    <string name="title">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="dots">...</string>
    <string name="add_title">Title</string>
    <string name="add_content">Note</string>
    <string name="google_maps_key">AIzaSyAuWeO9IzC4i2LZZmFOUQusr_FQ22OuTbk</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="login">login</string>
    <string name="enter_the_data">Enter your data</string>
    <string name="enter_password">Enter password</string>
</resources>